# RimSort

./: .gitignore  .gitmodules  .jscpd.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .translation_cache.json  ACKNOWLEDGEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  README.md  RimSort.code-workspace  RimSort.py  SteamworksPy_arm.dylib  SteamworksPy_i386.dylib  app.py  app.spec  build_msi.ps1  build_steamfiles.py  build_steamworkspy.py  build_swp_setup-32bit.bat  build_swp_setup-64bit.bat  build_swp_setup32.bat  build_swp_setup64.bat  check_deferred_imports.py  depot_platforms.json  distribute.py  justfile  mypy_types.txt  pyinstaller_Darwin.spec  pyinstaller_Linux.spec  pyinstaller_Windows_64bit.spec  pyproject.toml  requirements.txt  requirements_build.txt  requirements_darwin_arm64.txt  requirements_develop.txt  rimsort.nuitka-package.config.yml  (+11 more)
.githooks/: pre-commit
.github/: dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yaml  feature_request.yml
.github/workflows/: alpha-release.yml  auto_build.yml  build.yml  codeql.yml  edge-release.yml  get_version.yml  get_version_format.yml  get_version_info.yml  lint.yml  pages.yml  pr_labeler.yml  pre-commit.yml  pyright.yml  pytest.yml  release.yml  test_builds.yml
.specstory/history/: 2026-02-21_21-13Z-active-mod-list-dividers.md  2026-02-21_21-16Z-active-mod-list-serialization.md  2026-02-21_21-16Z-context-menu-implementation-in-rimsort.md  2026-02-21_21-16Z-rimsort-codebase-exploration.md  2026-02-21_21-33Z-unguarded-access-patterns-for-divider-uuids.md
RimSort/controllers/: app_controller.py  menu_bar_controller.py  settings_controller.py
RimSort/models/: animations.py  image_label.py  mod_list.py  mod_list_item.py  multibutton.py  scroll_label.py  settings.py
RimSort/sort/: alphabetical_sort.py  dependencies.py  topo_sort.py
RimSort/utils/: app_info.py  metadata.py  schema.py  system_info.py  watchdog.py
RimSort/views/: game_configuration_panel.py  main_content_panel.py  main_window.py  menu_bar.py  settings_dialog.py  status_panel.py
RimSort/windows/: missing_mods_panel.py  rule_editor_panel.py  runner_panel.py  settings_panel.py  workshop_mod_updater_panel.py
app/: __main__.py
app/cli/: __init__.py  build_db.py  main.py
app/controllers/: app_controller.py  companion_controller.py  downloads_controller.py  file_search_controller.py  instance_controller.py  language_controller.py  main_content_controller.py  main_window_controller.py  menu_bar_controller.py  metadata_controller.py  metadata_db_controller.py  mods_panel_controller.py  secure_settings_controller.py  settings_controller.py  sort_controller.py  steamcmd_controller.py  theme_controller.py  todds_controller.py  troubleshooting_controller.py
app/models/: animations.py  dialogue.py  divider.py  download_state.py  filter_state.py  image_label.py  instance.py  mod_list.py  mod_list_item.py  multibutton.py  operation_mode.py  scroll_label.py  search_result.py  secure_settings.py  settings.py
app/services/: http_download_service.py  import_export_service.py  instance_service.py  mod_path_service.py  path_autodetect_service.py  version_data_service.py  window_manager.py
app/sort/: alphabetical_sort.py  cycle_breaker.py  dependencies.py  mod_sorting.py  topo_sort.py
app/startup/: migration_startup.py
app/utils/: acf_utils.py  app_info.py  aux_db_utils.py  button_factory.py  clickable_qlabels.py  constants.py  csv_export_utils.py  custom_list_widget_item.py  custom_list_widget_item_metadata.py  custom_qlabels.py  db_builder.py  db_builder_core.py  dds_utility.py  dict_utils.py  download_progress_poller.py  download_tracker.py  event_bus.py  external_metadata_loaders.py  file_search.py  files.py  generic.py  git.py  git_utils.py  git_worker.py  globals.py  gui_info.py  http.py  http_downloader.py  ignore_extensions.py  ignore_manager.py  json_utils.py  log_config.py  (+28 more)
controller/: app_controller.py  main_window_controller.py  menu_bar_controller.py  settings_controller.py
data/: AppIcon_a.icns  RimSort.wxs  io.github.rimsort.RimSort.desktop  io.github.rimsort.RimSort.metainfo.xml  logger_tt-DEBUG.json  logger_tt-INFO.json  logging_config.json  style.qss
docs/: 404.html  ACKNOWLEDGEMENTS.md  Gemfile  _config.yml  faq.md  faq.zh-cn.md  faq.zh.md  index.md  index.zh-cn.md  index.zh.md  permissions.md  superpowers
junit/: test-results.xml
libs/: SteamworksPy.dylib  SteamworksPy_arm.dylib  SteamworksPy_i386.dylib  rimsort_steam.dylib
locales/: da.ts  de_DE.qm  de_DE.ts  en_US.qm  en_US.ts  es_ES.qm  es_ES.ts  fr_FR.qm  fr_FR.ts  ja_JP.qm  ja_JP.ts  ko_KR.qm  ko_KR.ts  pt_BR.qm  pt_BR.ts  qtbase_de_DE.qm  ru_RU.qm  ru_RU.ts  tr_TR.qm  tr_TR.ts  zh_CN.qm  zh_CN.ts  zh_TW.qm  zh_TW.ts
model/: animation_label.py  animations.py  dialogue.py  image_label.py  mod_list.py  mod_list_item.py  multibutton.py  progress_thread.py  scroll_label.py  settings.py
packaging/: EULA.rtf  optimize_macos_bundle.py
panel/: actions_panel.py  active_mods_panel.py  inactive_mods_panel.py  mod_info_panel.py  settings_panel.py
sort/: alphabetical_sort.py  dependencies.py  rimpy_sort.py  topo_sort.py
sub_view/: actions_panel.py  active_mods_panel.py  inactive_mods_panel.py  mod_info_panel.py
tests/: conftest.py  test_add_incompatibility.py  test_i18n_source_extraction.py  test_merge_logic.py  test_translation_helper.py  utils.py
util/: IPublishedFileService.py  ModListIcons.py  app_info.py  constants.py  data.py  error.py  event_bus.py  exception.py  filesystem.py  generic.py  gui_info.py  metadata.py  mods.py  proxy_style.py  schema.py  watchdog.py  xml.py
view/: active_mods_panel.py  game_configuration_panel.py  inactive_mods_panel.py  main_content_panel.py  main_window.py  menu_bar.py  mod_info_panel.py  settings_dialog.py  status_panel.py
wiki/: main.md
window/: missing_mods_panel.py  rule_editor_panel.py  runner_panel.py  settings_panel.py  web_content_panel.py  workshop_mod_updater_panel.py
(+566 files in other folders)
