#cSpell: ignore unimported, subclassing

[project]
name = "rimsort"
description = "An open source mod manager for RimWorld."
version = "0.0.0" # Fake version, version is set in version.xml file # TODO: Switch to tracking version dynamically
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4==4.14.2",
    "certifi==2025.11.12",
    "chardet==5.2.0",
    "imageio==2.37.2",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "msgspec==0.19.0",
    "natsort==8.4.0",
    "networkx==3.5",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "psutil==7.1.3",
    "pygit2==1.19.0",
    "pygithub==2.8.1",
    "pyside6==6.10.1",
    "requests==2.32.5",
    "sqlalchemy==2.0.44",
    "steam==1.4.4",
    "steamfiles",
    "toposort==1.10",
    "watchdog==6.0.0",

    "zstandard==0.25.0",
]

[tool.uv.sources]
steamfiles = { git = "https://github.com/RimSort/steamfiles" }

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.17.1",
    "pylance>=0.32.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "ruff>=0.12.7",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-greenlet>=3.2.0.20250417",
    "types-lxml>=2025.3.30",
    "types-networkx>=3.5.0.20250728",
    "types-pexpect>=4.9.0.20250516",
    "types-psutil>=7.0.0.20250801",
    "types-pygit2>=1.15.0.20250319",
    "types-pygments>=2.19.0.20250715",
    "types-requests>=2.32.4.20250611",
    "types-toposort>=1.10.0.20250401",

]

build = [
    "nuitka==2.8.6",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
pretty = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ['venv', '.venv', 'submodules']

[[tool.mypy.overrides]]
module = ['steam.*', 'steamfiles.*', 'pytestqt.qtbot', 'zstandard']
ignore_missing_imports = true

[tool.ruff]
# Defaults to Black like
line-length = 88
indent-width = 4
lint.extend-select = ["I"]
exclude = ["submodules"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = '.'
testpaths = ['tests']

# exclude submodules from test discovery
norecursedirs = ['submodules']

[tool.pyright]
pythonPlatform = "All"
