#cSpell: ignore unimported, subclassing

[project]
name = "rimsort"
description = "An open source mod manager for RimWorld."
version = "0.0.0" # Fake version, version is set in version.xml file # TODO: Switch to tracking version dynamically
requires-python = "==3.12.*"
dependencies = [
    "aiohttp==3.13.5",
    "beautifulsoup4==4.14.3",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "imageio==2.37.3",
    "loguru==0.7.3",
    "lxml==6.1.0",
    "msgspec==0.21.1",
    "natsort==8.4.0",
    "networkx==3.6.1",
    "packaging==26.1",
    "platformdirs==4.9.6",
    "psutil==7.2.2",
    "pygit2==1.19.2",
    "pygithub==2.9.1",
    "pyside6==6.11.0",
    "rapidfuzz>=3.14.3",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "steam==1.4.4",
    "steamfiles",
    "toposort==1.10",
    "watchdog==6.0.0",
    "zstandard==0.25.0",
]

[tool.uv.sources]
steamfiles = { git = "https://github.com/RimSort/steamfiles" }

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.20.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "ruff>=0.15.11",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-greenlet>=3.2.0.20250417",
    "types-lxml>=2025.3.30",
    "types-networkx>=3.6.1.20260408",
    "types-pexpect>=4.9.0.20250516",
    "types-psutil>=7.0.0.20250801",
    "types-pygit2>=1.15.0.20250319",
    "types-pygments>=2.19.0.20250715",
    "types-requests>=2.32.4.20250611",
    "types-toposort>=1.10.0.20250401",

]

build = [
    "nuitka==4.0.8",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
pretty = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ['venv', '.venv', 'submodules']

[[tool.mypy.overrides]]
module = ['steam.*', 'steamfiles.*', 'pytestqt.qtbot', 'zstandard']
ignore_missing_imports = true

[tool.ruff]
# Defaults to Black like
line-length = 88
indent-width = 4
lint.extend-select = ["I"]
exclude = ["submodules"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = '.'
testpaths = ['tests']

# exclude submodules from test discovery
norecursedirs = ['submodules']

[tool.pyright]
pythonPlatform = "All"
