#cSpell: ignore unimported, subclassing

[project]
name = "rimsort"
description = "An open source mod manager for RimWorld."
version = "0.0.0" # Fake version, version is set in version.xml file # TODO: Switch to tracking version dynamically
requires-python = "==3.12.*"
dependencies = [
    "aiohttp==3.14.1",
    "beautifulsoup4==4.15.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "loguru==0.7.3",
    "lxml==6.1.1",
    "msgspec==0.21.1",
    "natsort==8.4.0",
    "networkx==3.6.1",
    "packaging==26.2",
    "platformdirs==4.10.0",
    "psutil==7.2.2",
    "pygit2==1.19.3",
    "pygithub==2.9.1",
    "pyside6==6.11.1",
    "rapidfuzz>=3.14.3",
    "requests==2.34.2",
    "sqlalchemy==2.0.51",
    "steam==1.4.4",
    "steamfiles",
    "toposort==1.10",
    "watchdog==6.0.0",
    "zstandard==0.25.0",
]

[tool.uv.sources]
steamfiles = { git = "https://github.com/RimSort/steamfiles" }

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.20.2",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "ruff>=0.15.20",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-greenlet>=3.5.0.20260518",
    "types-lxml>=2025.3.30",
    "types-networkx>=3.6.1.20260624",
    "types-pexpect>=4.9.0.20260518",
    "types-psutil>=7.2.2.20260518",
    "types-pygit2>=1.15.0.20250319",
    "types-pygments>=2.20.0.20260518",
    "types-requests>=2.33.0.20260518",
    "types-toposort>=1.10.0.20250401",

]

build = [
    "nuitka==4.1.3",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
pretty = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ['venv', '.venv', 'submodules']

[[tool.mypy.overrides]]
module = ['steam.*', 'steamfiles.*', 'pytestqt.qtbot', 'zstandard']
ignore_missing_imports = true

[tool.ruff]
# Defaults to Black like
line-length = 88
indent-width = 4
lint.extend-select = ["I"]
exclude = ["submodules"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = '.'
testpaths = ['tests']

# exclude submodules from test discovery
norecursedirs = ['submodules']

[tool.pyright]
# Type checking mode: basic, standard or strict
pythonPlatform = "All"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
stubPath = ""
exclude = ['venv', '.venv', 'submodules', '**/node_modules', '**/__pycache__', '**/.*']

